src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Absent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked, if student is absent</description>
        <inlineHelpText>Checked, if student is absent</inlineHelpText>
        <label>Absent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related class to this attendance report</description>
        <inlineHelpText>Related class to this attendance report</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Division to this attendance</description>
        <inlineHelpText>Related Division to this attendance</inlineHelpText>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked, i f student is present for the day</description>
        <inlineHelpText>Checked, i f student is present for the day</inlineHelpText>
        <label>Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_if_Absent__c</fullName>
        <description>Reason for absent</description>
        <inlineHelpText>Reason for absent</inlineHelpText>
        <label>Reason, if Absent</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StafName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the related staff</description>
        <inlineHelpText>Name of the related staff</inlineHelpText>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related student of this attendance report</description>
        <inlineHelpText>Related student of this attendance report</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SelectPresentOrAbsentCheckBoxAtATime</fullName>
        <active>true</active>
        <description>Restricts user to select only one checkbox at a time [Either Present / Absent]</description>
        <errorConditionFormula>AND(Present__c, Absent__c )</errorConditionFormula>
        <errorMessage>Select only one checkbox at a time [Present / Absent]</errorMessage>
    </validationRules>
</CustomObject>